1
[1;35mРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРбђРАђРађРађРађ 
[1;35mРађРађРађРађРбђРА┤РБєРађРађРађРађРађРБаРАђРађРађРађРађРађРађРБ╝РБ┐РАЌРађРађРађРађ
[1;35mРађРађРађРБаРаЪРађРаўРаиРаХРаХРаХРаЙРаЅРб│РАёРађРађРађРађРађРБДРБ┐РађРађРађРађРађ
[1;35mРађРађРБ░РаЃРађРађРађРађРађРађРађРађРађРађРб╗РБцРБцРБцРБцРБцРБ┐Рб┐РБёРађРађРађРађ
[1;35mРађРађРАЄРађ[1;31mxРађРађРађРађРађx[1;35mРађРађРађРађРБДРађРађРађРађРађРађРаЎРБиРА┤РаХРБд
[1;35mРађРађРб▒РАђРађ РаЅРаЅРађРађРађ  РађРбаРАЪРаѓРађРађРбђРБђРБаРБцРа┐РаъРаЏРаІ
[1;35mРБаРаЙРаІРаЎРБХРБцРБцРБцРБцРБцРБђРБаРБцРБЙРБ┐Ра┤РаХРаџРаІРаЅРаЂРађРађРађРађРађРађ
[1;35mРаЏРањРаЏРаЅРаЅРађРађРађРБ┤РаЪРББРА┤РаЏРаІРађРађРађРађРађРађРађРађРађРађРађРађРађ
[1;35mРађРађРађРађРађРађРађРађРаЏРаЏРаЅРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађРађ
[?25l[1;35mРЋўРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЏ                
РЋъРЋФ                [1;31m CLEANING                    [1;0m[1;35mРЋФРЋА                
РЋњРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЋ[1;0m                
[?12l[?25h[?25l[3A[1;35mРЋўРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЏ                
РЋъРЋФ                [1;32m CLEANING                    [1;0m[1;35mРЋФРЋА                
РЋњРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЋ[1;0m                
[?12l[?25h[?25l[1;35mРЋўРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЏ                
РЋъРЋФ                [1;33m src/main.c                  [1;0m[1;35mРЋФРЋА                
РЋњРЋфРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋљРћђРЋфРЋЋ[1;0m                
[?12l[?25hIn file included from src/main.c:13:
src/shell.h:51:16: warning: useless storage class specifier in empty declaration
   51 | typedef struct s_infile;
      |                ^~~~~~~~
src/shell.h:52:1: error: expected identifier or Рђў(РђЎ before Рђў{РђЎ token
   52 | {
      | ^
src/shell.h:55:25: warning: data definition has no type or storage class
   55 | }                       t_infile;
      |                         ^~~~~~~~
src/shell.h:55:25: warning: type defaults to РђўintРђЎ in declaration of Рђўt_infileРђЎ [-Wimplicit-int]
src/shell.h:57:16: warning: useless storage class specifier in empty declaration
   57 | typedef struct s_outfile;
      |                ^~~~~~~~~
src/shell.h:58:1: error: expected identifier or Рђў(РђЎ before Рђў{РђЎ token
   58 | {
      | ^
src/shell.h:61:25: warning: data definition has no type or storage class
   61 | }                       t_infile;
      |                         ^~~~~~~~
src/shell.h:61:25: warning: type defaults to РђўintРђЎ in declaration of Рђўt_infileРђЎ [-Wimplicit-int]
src/shell.h:67:9: error: expected specifier-qualifier-list before Рђўt_infileРђЎ
   67 |         t_infile        *infile;
      |         ^~~~~~~~
make: *** [Makefile:61: objects/main.o] Error 1
